2001-09-05  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* show_comics: Added sorting the comics of the same name by date.

2001-09-03  Elliot Glaysher  <glaysher@umich.edu>

	* debian/netcomics-modules.files, debian/netcomics.conffiles, 
	debian/netcomics.dirs, debian/netcomics.files, debian/rules:
	Redid debian build system so that we are now VENDOR, not SITE.

2001-09-02  Elliot Glaysher  <glaysher@umich.edu>

	* debian/netcomics.dirs: Changed dirs to new system. Oops. Thanks
	Ben...

2001-09-01  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/Modify_Webpage_Creation-HOWTO.html: Changed template to be
	surrouneded by <PRE></PRE>.
	* doc/netcomics.pod (SYNOPSIS): Updated & reorganized the CLI
	synopsis.
	(OPTIONS): Added -wf, -nwa, & -wa.
	* netcomicsrc: Added $webpage_datefmt
	* Netcomics/HTML/Page.pm (new): $webpage_datefmt used instead of
	hardcoded date format.
	* Netcomics/Factory.pm (get_comics): Moved functionality for
	determining the remake webpage option for $given_options into
	Config.pm.
	* Netcomics/Config.pm.in (processARGV): Added
	append_to_given_options() to provide a common interface for
	building up the given_options attribute.
	(@EXPORT): added $webpage_datefmt
	(usage): Added -wf for webpage date format. Updated & reorganized
	the CLI	synopsis.

2001-08-31  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Page.pm (new): Fixed Page->{'filename'} to use a
	modified form of $webpage_filename_tmpl.
	* netcomics: now uses the Netcomics/HTML.pm wrapper.
	* Netcomics/HTML.pm (create_basic_page_set): Now a wrapper to create
	a set of webpages at $comic_dir level based from @rli.
	(create_archive_webpages): Now a wrapper to create webpages in
	$comic_dir/$subdir, after seperating comics by $subdir.

2001-08-30  Elliot Glaysher  <glaysher@umich.edu>

	* doc/Modify_Webpage_Creation-HOWTO.html: First draft for update.

2001-08-30  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
