@@ -52,19 +52,6 @@ doc/netcomics.lsm
 doc/netcomics.pod
 doc/old_Comic_Module-HOWTO.html
 doc/show_comics.pod
-html_tmpl/body_el1.html
-html_tmpl/body_el2.html
-html_tmpl/body_el3.html
-html_tmpl/body_el4.html
-html_tmpl/body_el5.html
-html_tmpl/body_el6.html
-html_tmpl/body_el7.html
-html_tmpl/body_el8.html
-html_tmpl/head.html
-html_tmpl/index_body_el.html
-html_tmpl/links.html
-html_tmpl/links_index.html
-html_tmpl/tail.html
 lib/after_y2k
 lib/an
 lib/angry_flower
