@@ -1,2 +1,2 @@
 usr/lib/perl5/Netcomics/Comics
-usr/lib/perl5/Netcomics/html_tmpl
+usr/lib/perl5/Netcomics/HTML/Themes
