@@ -1,9 +1,0 @@
-  <TR><TD ALIGN=CENTER>
-    <TABLE CELLSPACING=0 CELLPADDING=0 BORDER=0 <WIDTH>><TR>
-      <TD BGCOLOR=black ALIGN=CENTER><FONT FACE="Arial,Helvetica" SIZE=+1 COLOR=white><B><A NAME="<COMIC_ID>"><COMIC_NAME></A></B></FONT>
-      </TD>
-    </TR>
-    <TR><TD ALIGN=CENTER><A HREF="<COMIC_FILE1>"><IMG BORDER=0 SRC="<COMIC_FILE1>" <SIZE>></A><A HREF="<COMIC_FILE2>"><IMG BORDER=0 SRC="<COMIC_FILE2>" <SIZE>></A><A HREF="<COMIC_FILE3>"><IMG BORDER=0 SRC="<COMIC_FILE3>" <SIZE>></A><A HREF="<COMIC_FILE4>"><IMG BORDER=0 SRC="<COMIC_FILE4>" <SIZE>></A></TD></TR>
-    <CAPTION>
-    </TABLE>
-  </TD></TR>
