@@ -1,10 +1,0 @@
-<HTML>
-<HEAD>
-<TITLE><PAGETITLE> (<NUM=FIRST>-<NUM=LAST> of <NUM=TOTAL>)</TITLE>
-</HEAD>
-<BODY <LINK_COLOR> <VLINK_COLOR> <BACKGROUND>>
-<CENTER>
-<H1><PAGETITLE> (<NUM=FIRST>-<NUM=LAST> of <NUM=TOTAL>)</H1>
-</CENTER>
-
-<TABLE WIDTH=100%>
