@@ -1,8 +1,0 @@
-  <TR>
-    <TD><A HREF="<FILE=CURRENT>#<COMIC_ID>"><COMIC_NAME></A></TD>
-    <TD ALIGN=right><COMIC_DATE></TD>
-    <TD><COMIC_AUTHOR></TD>
-    <TD><COMIC_STATUS></TD>
-    <TD ALIGN=right><A HREF="<FILE=CURRENT>"><PAGE=CURRENT></A></TD>
-  </TR>
-
