@@ -1,8 +1,0 @@
-<TR><TD>
-<TABLE WIDTH=100%><TR>
-<TD ALIGN=left><A HREF="<FILE=PREV>">Previous <NUM> Comics</A></TD>
-<TD ALIGN=center><A HREF="<FILE=INDEX>">Index</A></TD>
-<TD ALIGN=right><A HREF="<FILE=NEXT>">Next <NUM> Comics</A></TD>
-</TR></TABLE>
-</TD></TR>
-
