@@ -1,6 +1,0 @@
-</TABLE>
-
-<HR>
-<FONT SIZE=-1><CENTER>This page was created on <CTIME>.</CENTER></FONT>
-</BODY>
-</HTML>
